# plugin-radar-monorepo

./: .gitignore  CHANGELOG.md  CLAUDE.md  MIGRATION-LOG.md  PRIVACY_POLICY.md  README.md  SHIPPING_ROADMAP.md  STATUS.md  USER_GUIDE.md  WEBSITE-REBRAND-PLAN.md  convex.json  deploy-convex.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: BUILD_PLAN.md  CLAUDE.md  CMakeLists.txt  ROADMAP.md
apps/desktop/.serena/: project.yml
apps/desktop/docs/: parameter-translation-research.md
apps/desktop/scripts/: build-all.sh
apps/desktop/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
apps/desktop/src/audio/: AudioMeter.cpp  AudioMeter.h  BranchGainProcessor.cpp  BranchGainProcessor.h  DSPUtils.h  DryWetMixProcessor.cpp  DuckingProcessor.cpp  DuckingProcessor.h  FFTProcessor.cpp  FFTProcessor.h  FastMath.h  GainProcessor.cpp  GainProcessor.h  LatencyCompensationProcessor.cpp  LatencyCompensationProcessor.h  MidSideMatrixProcessor.cpp  MidSideMatrixProcessor.h  MuteProcessor.cpp  MuteProcessor.h  NodeMeterProcessor.cpp  NodeMeterProcessor.h  PluginParameterWatcher.cpp  PluginParameterWatcher.h  PluginWithMeterWrapper.cpp  PluginWithMeterWrapper.h  SignalAnalyzer.cpp  SignalAnalyzer.h  WaveformCapture.cpp  WaveformCapture.h
apps/desktop/src/automation/: ParameterProxyPool.cpp  ParameterProxyPool.h  ProxyParameter.cpp
apps/desktop/src/bridge/: ResourceProvider.cpp  ResourceProvider.h  WebViewBridge.cpp  WebViewBridge.h
apps/desktop/src/core/: ChainNode.cpp  ChainNode.h  ChainProcessor.cpp  ChainProcessor.h  ChainSharingManager.cpp  ChainSharingManager.h  GroupTemplateManager.cpp  GroupTemplateManager.h  InstanceRegistry.cpp  InstanceRegistry.h  MirrorManager.cpp  MirrorManager.h  ParameterDiscovery.cpp  ParameterDiscovery.h  PluginManager.cpp  PluginManager.h  PresetManager.cpp  PresetManager.h  ScannerUtils.h  SerializationUtils.h  UserProfile.cpp  UserProfile.h
apps/desktop/src/platform/: KeyboardInterceptor.h  KeyboardInterceptor.mm
apps/desktop/src/scanner/: PluginScannerHelper.cpp
apps/desktop/src/ui/: PluginCanvas.cpp  PluginCanvas.h  PluginEditorHost.cpp  PluginEditorHost.h
apps/desktop/src/utils/: PlatformPaths.h  ProChainLogger.h
apps/desktop/tests/: BlacklistTests.cpp  ChainNodeTests.cpp  ChainProcessorTests.cpp  CrashPathChainProcessorTests.cpp  DSPTests.cpp  MirrorManagerTests.cpp  OversamplingTests.cpp  ParameterDiscoveryTests.cpp  PerformanceTests.cpp  PluginLoadUnloadTests.cpp  PluginProcessorLifecycleTests.cpp  PluginWithMeterWrapperTests.cpp  PresetSerializationTests.cpp  ScannerStressTests.cpp  ScannerUtilsTests.cpp  SerializationCrashTests.cpp  TestHelpers.h
apps/desktop/ui/: REDESIGN_VISION.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/ui/src/: App.tsx  index.css  main.tsx
apps/desktop/ui/src/api/: convex-client.ts  juce-bridge.ts  types.ts
apps/desktop/ui/src/api/__tests__/: convexClient.test.ts  juce-bridge.test.ts  offlineSync.test.ts  parameterMath.test.ts
apps/desktop/ui/src/components/: GrainientBackground.tsx  InlineEditorSidebar.tsx  InlineEditorSidebarIcons.tsx  InlineEditorToolbar.tsx  InlineMeterPanel.tsx  InlineSearchOverlay.tsx  LeftToolbar.tsx  NewPluginsToast.tsx  UndoToast.tsx
apps/desktop/ui/src/components/Browser/: AuthorAvatar.tsx  ChainCard.tsx  GroupPresetCard.tsx  PluginCard.tsx  UnifiedBrowser.tsx  index.ts
apps/desktop/ui/src/components/ChainBrowser/: AuthorAvatar.tsx  BrowseFilterBar.tsx  ChainBrowser.tsx  ChainBrowserCard.tsx  ChainBrowserDetail.tsx  ChainBrowserGrid.tsx  ChainBrowserSearch.tsx  ChainBrowserSidebar.tsx  EditChainModal.tsx  MyChainsList.tsx  PluginListPanel.tsx  TopologyDiagram.tsx  UnifiedChainCard.tsx  UseCaseCategoryTree.tsx  index.ts  useUnifiedChains.ts
apps/desktop/ui/src/components/ChainCanvas/: AddNode.tsx  CanvasContextMenu.tsx  ChainCanvas.tsx  EmptyCanvasState.tsx  FloatingAiChat.tsx  GroupHeaderNode.tsx  GroupMergeNode.tsx  PluginNode.tsx  SignalEdge.tsx  index.ts
apps/desktop/ui/src/components/ChainEditor/: BranchGainBadge.tsx  ChainEditor.tsx  ChainNodeList.tsx  ChainSlot.tsx  ChainSlotCyber.css  ChainSlotCyber.tsx  ChainSlot_Redesign.md  ChainTemplates.tsx  DragPreview.tsx  DropZone.tsx  DryPathSlot.tsx  EmptyStateKit.tsx  GroupBreadcrumbs.tsx  GroupContainer.tsx  InlinePluginSearch.tsx  LatencyDisplay.tsx  MirrorIndicator.tsx  OtherInstancesList.tsx  ParallelBranchControls.tsx  PluginControlsPanel.tsx  PluginSuggestions.tsx  PluginSwapMenu.tsx  QuickPluginSearch.tsx  SaveGroupTemplateModal.tsx  SlotContextMenu.tsx  index.ts
apps/desktop/ui/src/components/ChainSharing/: ReceivedChains.tsx  ShareChainModal.tsx  index.ts
apps/desktop/ui/src/components/CloudSync/: ChainDetailModal.tsx  CloudSync.tsx  CommentSection.tsx  LoadChainModal.tsx  SaveChainModal.tsx  StarRating.tsx  index.ts
apps/desktop/ui/src/components/ContextMenu/: ContextMenu.tsx  index.ts  menuConfigs.ts
apps/desktop/ui/src/components/Dropdown/: CascadingDropdown.tsx  CustomDropdown.tsx  DropdownOption.tsx  DropdownPanel.tsx  LEDIndicator.tsx  LufsPresetInput.tsx  dropdown.css  index.ts
apps/desktop/ui/src/components/Footer/: Footer.tsx
apps/desktop/ui/src/components/Friends/: AddFriend.tsx  FriendRequests.tsx  (+3 more)
apps/desktop/ui/src/constants/: categoryColors.ts  styleDefaults.ts  useCaseGroups.ts
apps/desktop/ui/src/data/: parameterMapSeed.ts
apps/desktop/ui/src/hooks/: useCanvasKeyboard.ts  useCanvasLayout.ts  useChainEditorShortcuts.ts  useChainToReactFlow.ts  useKeyboardShortcuts.ts  useModalEscape.ts
apps/desktop/ui/src/stores/: chainStore.ts  cloudChainStore.ts  groupTemplateStore.ts  keyboardStore.ts  meterStore.ts  offlineStore.ts  onboardingStore.ts  onboardingTypes.ts  panelStore.ts  pluginStore.ts  presetStore.ts  syncStore.ts  usageStore.ts
apps/desktop/ui/src/styles/: design-system.css
apps/desktop/ui/src/test/: setup.ts  smoke.test.ts
apps/desktop/ui/src/utils/: captureParameters.ts  chainHelpers.ts  loadChainWithSubstitutions.ts  timeFormatting.ts
(+621 files in other folders)
